# alu-mtn-sms

./: .gitignore  AUTHORS  README.md  pyproject.toml  requirements.txt
backend/: api.py  process_momo_sms.py
frontend/: index.html  main.js  sample_data.json  style.css
