[tool.poetry]
name = "momo-data-analysis"
version = "0.1.0"
description = "MTN MoMo SMS Data Analysis Dashboard"
authors = ["Clarence Liberi <liberintwari@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
